--- a/.github/workflows/CI_snapshot.yml
+++ b/.github/workflows/CI_snapshot.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Java setup
         uses: actions/setup-java@v4
         with:
-          distribution: adopt
-          java-version: 11
+          distribution: 'temurin'
+          java-version: '11'
           cache: 'maven'
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
