--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,8 +9,9 @@ formats:
 
 build:
   os: ubuntu-24.04
-  tools:
-  python: "3.12.7"
+  commands:
+    - pip install -r docs/requirements.txt
+    - sphinx-build -b html docs/source docs/build/html
 
 python:
   install:
