--- a/.github/workflows/CI release.yml
+++ b/.github/workflows/CI release.yml
@@ -11,10 +11,23 @@ jobs:
   build:
     name: Release and next iteration
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgis/postgis:16-3.4
+        env:
+          # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
+          POSTGRES_USER: orbisgis
+          POSTGRES_PASSWORD: orbisgis
+          POSTGRES_DB: orbisgis_db
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
+
       # Checkout the source code of the project
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Install the GPG secret key
       - name: Import GPG Key
@@ -27,7 +40,7 @@ jobs:
 
       # Setup the jdk using version 11 of Adoptium Temurin
       - name: Setup java 11 using Adoptium Temurin
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '11'
@@ -37,15 +50,6 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      # Setup postgis test DB
-      - uses: SPalominos/PostGIS-Installer-Action@v1.0.1
-        with:
-          psql_version: '9.6'
-          pgis_version: '2.5'
-          docker_image: 'postgis/postgis'
-          db_password: 'orbisgis'
-          db_user: 'orbisgis'
-          db_name: 'orbisgis_db'
 
       # Configure git user in order to sign release with OrbisGIS user.
       - name: Configure Git User
