--- a/.github/workflows/CI_snapshot.yml
+++ b/.github/workflows/CI_snapshot.yml
@@ -14,6 +14,18 @@ jobs:
   build:
     name: Upload Snapshot
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgis/postgis:16-3.4
+        env:
+          # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
+          POSTGRES_USER: orbisgis
+          POSTGRES_PASSWORD: orbisgis
+          POSTGRES_DB: orbisgis_db
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       # Checkout the source code of the project
       - name: Checkout
@@ -27,9 +39,10 @@ jobs:
         env:
           GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
           GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
+        if: ${{(env.GPG_PUBLIC_KEY != null)}}
 
-      # Setup the jdk using version 11 of adoptOpenJDK
-      - name: Java setup
+      # Setup the jdk using version 11 of Adoptium Temurin
+      - name: Setup java 11 using Adoptium Temurin
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -41,24 +54,15 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      # Set up the postgis database
-      - name: Postigs install
-        uses: SPalominos/PostGIS-Installer-Action@v1.0.1
-        with:
-          psql_version: '9.6'
-          pgis_version: '2.5'
-          docker_image: 'postgis/postgis'
-          db_password: 'orbisgis'
-          db_user: 'orbisgis'
-          db_name: 'orbisgis_db'
 
       # Deploy the snapshot
       - name: Deploy
-        run: mvn deploy --no-transfer-progress --batch-mode
+        run: mvn deploy -ntp --batch-mode
         env:
           MAVEN_USERNAME: ${{ secrets.MVN_CENTRAL_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MVN_CENTRAL_PASSWORD }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        if: ${{(env.MAVEN_USERNAME != null)}}
 
       # Build jar with dependencies
       - name: Build jar with dependencies
