--- a/pom.xml
+++ b/pom.xml
@@ -715,7 +715,7 @@
         </snapshotRepository>
         <repository>
             <id>central</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <url>https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
 </project>
