Update OrbisData to 2.1.2 and H2GIS to 2.2.5

--- a/bdtopo/pom.xml
+++ b/bdtopo/pom.xml
@@ -6,7 +6,6 @@
         <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0.1-SNAPSHOT</version>
 
     <!-- Project Information -->
     <name>bdtopo</name>
@@ -17,7 +16,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <groupId>org.orbisgis.geoclimate</groupId>
     <artifactId>bdtopo</artifactId>
     <dependencies>
         <dependency>
@@ -96,14 +94,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <distributionManagement>
-        <site>
-            <id>orbisgis-devs-website</id>
-            <name>Devs Website</name>
-            <url>file:/var/www/html/${project.parent.artifactId}/${project.artifactId}</url>
-        </site>
-    </distributionManagement>
 </project>
