--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -106,6 +106,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
         </plugins>
 
         <resources>
@@ -125,12 +134,4 @@
             </resource>
         </resources>
     </build>
-
-    <distributionManagement>
-        <site>
-            <id>orbisgis-devs-website</id>
-            <name>Devs Website</name>
-            <url>file:/var/www/html/${project.parent.artifactId}/${project.artifactId}</url>
-        </site>
-    </distributionManagement>
 </project>
