--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>osm</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
 
     <!-- Project Information -->
     <name>osm</name>
@@ -106,15 +105,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <distributionManagement>
-        <site>
-            <id>orbisgis-devs-website</id>
-            <name>Devs Website</name>
-            <url>file:/var/www/html/${project.parent.artifactId}/${project.artifactId}</url>
-        </site>
-    </distributionManagement>
-
 </project>
