--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.2.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>geoindicators</artifactId>
-    <version>1.0.1</version>
+    <version>1.2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
