--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -11,6 +11,10 @@
     <artifactId>geoindicators</artifactId>
     <version>1.2.0-SNAPSHOT</version>
 
+    <!-- Project Information -->
+    <name>geoindicators</name>
+    <description>Module to compute the GeoClimate indicators.</description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
