--- a/.github/workflows/CI release.yml
+++ b/.github/workflows/CI release.yml
@@ -59,7 +59,7 @@ jobs:
 
       # Test build
       - name: Build test
-        run: mvn -ntp clean validate compile javadoc:test-javadoc javadoc:jar
+        run: mvn -ntp clean validate compile javadoc:jar
 
       # Create the release :
       #   - move from Snapshot version to Release
