--- a/.github/workflows/CI release.yml
+++ b/.github/workflows/CI release.yml
@@ -59,7 +59,7 @@ jobs:
 
       # Test build
       - name: Build test
-        run: mvn -ntp clean validate compile javadoc:jar
+        run: mvn -ntp clean validate compile test javadoc:test-javadoc javadoc:jar
 
       # Create the release :
       #   - move from Snapshot version to Release
@@ -85,15 +85,15 @@ jobs:
       - name: Export env values
         run: echo "GIT_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)" >> $GITHUB_ENV
 
-      # Make the github release from the last created tag. Write in its body the content of the changelog file.
-      - name: Make github release
-        uses: actions/create-release@v1
+      # Make the Github release from the last created tag. Write in its body the content of the changelog file.
+      - name: Make Github release
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ env.GIT_TAG }}
-          release_name: ${{ env.GIT_TAG }}
-          body_path: docs/CHANGELOG.md
+          tag: ${{ env.GIT_TAG }}
+          release: ${{ env.GIT_TAG }}
+          bodyFile: "docs/CHANGELOG.md"
           draft: false
           prerelease: false
 
