--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>geoindicators</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <!-- Project Information -->
     <name>geoindicators</name>
