--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <!-- Project Information -->
